# jos

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  jbLocalTesting.ps1  ldlog.txt
.github/workflows/: docker-image.yml
buildenv_rust/: Dockerfile
kernel/: Cargo.toml  build.rs
kernel/asm/: interrupt.asm  switch_to_ring3.asm
kernel/asm/boot/: main.asm  main64.asm
kernel/src/: acpi.rs  file.rs  filesystem.rs  gdt.rs  hdd.rs  heap.rs  interrupt.S  interrupt.rs  kernel.rs  keyboard.rs  kprint.rs  logging.rs  mem.rs  mem_config.rs  process.rs  profiling.rs  serial.rs  switch_to_ring3.S  syscall.rs  time.rs  tracing_setup.rs  userland.rs  util.rs  vga.rs
kernel/termsize-stub/: Cargo.toml  lib.rs
src/: gdt.rs  process.rs  userland.rs
src/bootloader/: main.asm  main64.asm
src/impl/x86_64/: interrupt.asm  switch_to_ring3.asm
src/kernel/asm/: interrupt.asm  switch_to_ring3.asm
src/kernel/src/: kernel.rs
storage/: generateExt2Img.sh  test.txt
targets/x86_64/: linker.ld
test/: conftest.py  pyproject.toml  requirements.txt  run.sh  setup.sh  test_kernel_startup.py
tools/perf/: README.md  generateFlameGraph.sh  profile_pb2.py  psample.py  serial2chrome.py  stacks.folded  trace2callgrind.py  trace2pprof.py
userland/: Cargo.toml  build_bash.sh  build_dash.sh
userland/src/: libc.c  libc.h  libc.rs  main.c  main.rs
userland/src/doom/: inttypes.h  libc.c  libc.h  libc.rs  main.c  stdint.h
userland/usr/: libc.c
userland/usr/include/: chartypes.h  ctype.h  dirent.h  errno.h  fcntl.h  fnmatch.h  inttypes.h  libc.h  limits.h  locale.h  pwd.h  setjmp.h  sgtty.h  signal.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h  wchar.h  wctype.h
userland/usr/include/arpa/: inet.h
userland/usr/include/sys/: mman.h  resource.h  stat.h  times.h  wait.h
