[package]
name = "jos-kernel"
version = "0.1.0"
build = "build.rs"

[build-dependencies]
vergen = { version = "9.0.1", features = ["build"] }

[dependencies]
include_bytes_aligned = "0.1.4"

[dependencies.linked_list_allocator]
version = "0.10.5"

[dependencies.spin]
version = "0.9.8"
default-features = false
features = ["mutex", "spin_mutex"]

[dependencies.elf]
version = "0.7.4"
default-features = false

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[lib]
name = "jos"
edition = "2021"
path = "src/kernel.rs" 
crate-type = ["staticlib"]
